[package]
name = "yellowstone-geyser-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2.33"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.8"
prost = "0.11"
yaml-rust = "0.4"
solana-client = "1.16"
solana-sdk = "1.16"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

[build-dependencies]
tonic-build = "0.8"
